--- a/betting-game-vue/src/locales/en.json
+++ b/betting-game-vue/src/locales/en.json
@@ -1,3 +1,6 @@
 {
-  "message": "hello i18n !!"
+  "message": "hello i18n !!",
+  "homepage": {
+    "title": "THE BEST FOOTBALL BETTING APP"
+  }
 }
