BBG-61: Update Homepage Design and add Unit Tests
* added support for scss, updated homepage to use grid instead of flex

* update homepage background design

* update homepage design

* optimize code in store, add test for theme store

* fix store namespace

* add unit test for matchday table

* add matchdaytable unit test

* add unit test for MatchdayChooser component

* add unit test for MatchRow component

* add todo

--- a/betting-game-vue/src/locales/de.json
+++ b/betting-game-vue/src/locales/de.json
@@ -1,7 +1,7 @@
 {
   "message": "Hallo i18n !!",
   "homepage": {
-    "title": "DIE BESTE FUßBALL TIPPAPP"
+    "title": "Spielen Sie mit der Bundesliga über NovaTipp"
   },
   "loginpage": {
     "title": "Anmelden",
