--- a/betting-game-vue/src/locales/en.json
+++ b/betting-game-vue/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "message": "hello i18n !!",
   "homepage": {
-    "title": "THE BEST FOOTBALL BETTING APP"
+    "title": "Play along Bundesliga league with NovaTipp"
   },
   "loginpage": {
     "title": "Login",
