--- a/betting-game-vue/src/locales/es.json
+++ b/betting-game-vue/src/locales/es.json
@@ -1,6 +1,6 @@
 {
     "homepage": {
-      "title": "LA MEJOR APP DE APUESTAS DEPORTIVAS"
+      "title": "Juega con la Bundesliga a través de NovaTipp"
     },
     "loginpage": {
       "title": "Inicio de sesión",
